--- a/app/src/main/res/layout/fragment_task_create.xml
+++ b/app/src/main/res/layout/fragment_task_create.xml
@@ -1,35 +1,30 @@
-<FrameLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.doctorandonuts.taskchampion.TaskCreateFragment">
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <TextView
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:labelFor="@+id/editDescription"
-                android:text="Description: "/>
-            <EditText
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/editDescription"
-                android:inputType="text"
-                android:layout_gravity="start|top" />
-        </LinearLayout>
-        <Button
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
             android:layout_width="100dp"
-            android:layout_height="50dp"
-            android:id="@+id/addTask"
-            android:onClick="addTask"
-            android:text="Add"/>
+            android:layout_height="wrap_content"
+            android:labelFor="@+id/editDescription"
+            android:text="@string/details_description"/>
+        <EditText
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/editDescription"
+            android:inputType="text"
+            android:layout_gravity="start|top" />
     </LinearLayout>
-</FrameLayout>
+    <Button
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:id="@+id/addTask"
+        android:onClick="addTask"
+        android:text="@string/action_add"/>
+</LinearLayout>
